2002-11-12  Forgotten  <forgotten@users.sourceforge.net>

	* src\SDL.cpp (sdlReadPreferences): fixed incorrect variable being used for saveType
	(main): removeIntros was not being used
	(main): apply IPS patch automatically if it exists
	* src/Util.cpp (utilApplyIPS): added IPS patching code
	* src/win32/Win32.cpp (fileOpen): apply IPS patch automatically if it exists	

2002-11-07  Forgotten  <forgotten@users.sourceforge.net>

	* src/SDL.cpp (main): fixed crash when trying load file that does not exist
	* src/SDL.cpp (systemUpdateMotionSensor): implemented motion sensor for the SDL version

2002-11-06  Forgotten  <forgotten@users.sourceforge.net>

	* src/elf.cpp: fix wrong usage of CPUReadMemory
	* src/admame.cpp: fixed incorrect #ifdef usage
	* configure.in: added test for socklen_t type
	* src/remote.cpp: fix problem compiling in some systems
	* src/GBA.cpp (CPULoop): added support for movement sensor
	* src/GBA.cpp (CPUReset): added support for selecting save type available

2002-11-05  Forgotten  <forgotten@users.sourceforge.net>

	* src/win32/DirectoriesDlg.cpp (browseForDir): fix bug when changing directory using the Browse button

2002-11-04  Forgotten  <forgotten@users.sourceforge.net>

	* src/GBA.cpp (CPUUpdateRegister): do not change timer data when writting to register TMxD. Only a restart or overflow will change the value

2002-11-02  Forgotten  <forgotten@users.sourceforge.net>

	* src/GBA.cpp (CPUWriteGSASnapshot): Compute CRC of save

2002-10-31  Forgotten  <forgotten@users.sourceforge.net>

	* src/GBA.cpp (CPUWriteGSASnapshot): fixed a few bytes in the snapshot
	* src/Sound.cpp (soundEvent): fixed envelope reload bugs
	* src/bios.cpp (BIOS_MidiKey2Freq): Added method (user contribution)
	* src/Gfx.h: fixed problems in big endian machines

2002-10-29  Forgotten  <forgotten@users.sourceforge.net>

	* src/thumb.cpp: fixed bugs in C core 

2002-10-28  Forgotten  <forgotten@users.sourceforge.net>
