@@ -1,3 +1,7 @@
+2002-11-13  Forgotten  <forgotten@users.sourceforge.net>
+
+	* src/SDL.cpp (sdlFindPreferences): improve search for configuration file
+
 2002-11-12  Forgotten  <forgotten@users.sourceforge.net>
 
 	* src\SDL.cpp (sdlReadPreferences): fixed incorrect variable being used for saveType
